--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -18,7 +17,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-        
     <link rel="stylesheet" href="style.css">
 
     <header>
@@ -30,11 +28,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown" class="fl">
                 <ul class="navbar-nav ml-auto ">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active"></li>
-                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">About</a>
@@ -44,35 +42,36 @@
         </nav>
     </header>
 </head>
-    
+
 <body>
     <div class="container, col-lg-8">
-        <div class="jumbotron" >
+        <div class="jumbotron">
             <h2 class="display-4">Contact</h2>
             <hr class="my-4">
             <form>
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Name</label>
-                  <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name"/>
+                    <label for="exampleFormControlInput1">Name</label>
+                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" />
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Email</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
-                  </div>
+                </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Message</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Message"></textarea>
                 </div>
                 <button type="button" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </div>
-
 </body>
 
 <footer>
     <hr>
     <p>&copy; Copyright</p>
+    <br>
 </footer>
 
 </html>
