--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="style.css">
 
     <header>
@@ -46,19 +45,35 @@
 </head>
 
 <body>
-    <div class="col-lg-8, col-sm-8, col-12">
-        <div class="jumbotron" >
+    <div>
+        <div class="jumbotron">
+            <style>
+                @media screen and (max-width: 992px) {
+                    .jumbotron {
+                        max-width: 63.5%;
+                    }
+                }
+                @media screen and (max-width: 400px) {
+                    .jumbotron {
+                        max-width: 95%;
+                    }
+                }
+            </style>
             <h2 class="display-4">About Me</h2>
             <hr class="my-4">
-            <div class="placeholder"><img src="https://via.placeholder.com/200" alt="Placeholder 200x200"/></div>
+            <div class="placeholder"><img src="https://via.placeholder.com/200" alt="Placeholder 200x200" /></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tellus lacinia, rutrum dui sit amet,
-                vestibulum augue. Sed mollis purus id posuere blandit. Pellentesque efficitur gravida felis, ac consequat
-                dolor interdum nec. Donec a faucibus elit. Nam tortor elit, scelerisque a volutpat id, tempor eu justo. Nunc
-                sed consequat tortor. Aliquam orci libero, ornare convallis molestie vel, sodales quis lectus. Nam ultrices
+                vestibulum augue. Sed mollis purus id posuere blandit. Pellentesque efficitur gravida felis, ac
+                consequat
+                dolor interdum nec. Donec a faucibus elit. Nam tortor elit, scelerisque a volutpat id, tempor eu justo.
+                Nunc
+                sed consequat tortor. Aliquam orci libero, ornare convallis molestie vel, sodales quis lectus. Nam
+                ultrices
                 egestas sagittis. Suspendisse potenti.</p>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at tellus lacinia, rutrum dui sit amet,
-                vestibulum augue. Sed mollis purus id posuere blandit. Pellentesque efficitur gravida felis, ac consequat
+                vestibulum augue. Sed mollis purus id posuere blandit. Pellentesque efficitur gravida felis, ac
+                consequat
                 dolor interdum nec. Donec a faucibus elit.</p>
         </div>
     </div>
@@ -68,6 +83,7 @@
 <footer>
     <hr>
     <p>&copy; Copyright</p>
+    <br>
 </footer>
 
 </html>
