--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-        
     <link rel="stylesheet" href="style.css">
 
     <header>
@@ -33,7 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active"></li>
+                    <li class="nav-item active">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
@@ -44,22 +43,22 @@
         </nav>
     </header>
 </head>
-    
+
 <body>
-    <div class="container, col-lg-8, col-md-8, col-sm-8, col-9">
-        <div class="jumbotron" >
+    <div class="container, col-lg-8, col-md-8, col-sm-8">
+        <div class="jumbotron">
             <h2 class="display-4">Portfolio</h2>
             <hr class="my-4">
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250"/></div>
-                <div class="placeholderport"><img src="https://via.placeholder.com/250"/></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
             </div>
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250"/></div>
-                <div class="placeholderport"><img src="https://via.placeholder.com/250"/></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
             </div>
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250"/></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
             </div>
         </div>
     </div>
@@ -69,6 +68,7 @@
 <footer>
     <hr>
     <p>&copy; Copyright</p>
+    <br>
 </footer>
 
 </html>
