Files are working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="indexstyle.css">
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,20 +45,8 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <div class="jumbotron">
-            <style>
-                @media screen and (max-width: 992px) {
-                    .jumbotron {
-                        max-width: 63.5%;
-                    }
-                }
-                @media screen and (max-width: 400px) {
-                    .jumbotron {
-                        max-width: 95%;
-                    }
-                }
-            </style>
             <h2 class="display-4">About Me</h2>
             <hr class="my-4">
             <div class="placeholder"><img src="https://via.placeholder.com/200" alt="Placeholder 200x200" /></div>
