--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div>
         <div class="jumbotron">
             <h2 class="display-4">About Me</h2>
             <hr class="my-4">
