Updated ReadMe file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <body>
     <div>
-        <div class="jumbotron">
+        <div class="jumbotron col-lg-8">
             <h2 class="display-4">About Me</h2>
             <hr class="my-4">
             <div class="placeholder"><img src="https://via.placeholder.com/200" alt="Placeholder 200x200" /></div>
