--- a/portfolio.html
+++ b/portfolio.html
@@ -50,15 +50,15 @@
             <h2 class="display-4">Portfolio</h2>
             <hr class="my-4">
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
-                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" alt="placehoder 250x250"/></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" alt="placehoder 250x250"/></div>
             </div>
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
-                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" alt="placehoder 250x250"/></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" alt="placehoder 250x250"/></div>
             </div>
             <div class="row">
-                <div class="placeholderport"><img src="https://via.placeholder.com/250" /></div>
+                <div class="placeholderport"><img src="https://via.placeholder.com/250" alt="placehoder 250x250"/></div>
             </div>
         </div>
     </div>
